ApiGateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 2 # 안정성을 위해 2개의 파드를 실행합니다.
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-app
        image: cuecode.kr.ncr.ntruss.com/api-gateway:latest # CI/CD 파이프라인에서 빌드한 이미지를 사용합니다.
        ports:
        - containerPort: 13000
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 13000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 13000
          initialDelaySeconds: 40
          periodSeconds: 15
