ApiGateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: ClusterIP # Ingress가 트래픽을 전달할 대상이므로 ClusterIP로 충분합니다.
  selector:
    app: api-gateway
  ports:
  - name: http
    port: 13000
    targetPort: 13000
