ApiGateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.kpaas-competition.com # API 서버 도메인
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 13000
  - host: kpaas-competition.com # 웹 UI 도메인
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: front-ui-service
            port:
              number: 8080
